[package]
name = "ping-pong-latency"
version = "0.1.0"
description = "Desktop ping and latency monitor"
authors = ["Ping Pong Latency"]
edition = "2021"

[lib]
name = "ping_pong_latency_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5", features = [] }
tauri-plugin-log = "2.4"
tauri-plugin-opener = "2.2"
tokio = { version = "1.42", features = ["process", "rt-multi-thread", "sync", "time"] }
